<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.common.profile.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileToolBar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/splinesansmedium"
            android:text="@string/navigation_profile"
            android:textSize="22sp">

        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="660dp"
        android:background="@color/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,UnknownIdInLayout">

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:ems="10"
            android:inputType="text"
            android:fontFamily="@font/splinesansmedium"
            android:text="@string/username_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="text"
            android:fontFamily="@font/splinesansmedium"
            android:text="@string/email_example"
            app:layout_constraintEnd_toEndOf="@+id/nameEdit"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/nameEdit"
            app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="text"
            android:fontFamily="@font/splinesansmedium"
            android:text="@string/phone_example"
            app:layout_constraintEnd_toEndOf="@+id/emailEdit"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/emailEdit"
            app:layout_constraintTop_toBottomOf="@+id/emailEdit" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="text"
            android:fontFamily="@font/splinesansmedium"
            android:text="@string/password_example"
            app:layout_constraintEnd_toEndOf="@+id/phoneEdit"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/phoneEdit"
            app:layout_constraintTop_toBottomOf="@+id/phoneEdit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/splinesansmedium"
            android:text="@string/change_data_button"
            app:layout_constraintEnd_toEndOf="@+id/passwordEdit"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/passwordEdit"
            app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/log_out_button"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/splinesansmedium"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>