<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.common.auth.AuthFragment">


    <Button
        android:id="@+id/google_button"
        android:layout_width="330dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/splinesansmedium"
        android:shadowColor="@color/black"
        android:text="@string/google_button"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password_editText"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/password_example"
        android:fontFamily="@font/splinesansmedium"
        app:startIconDrawable="@drawable/password"
        app:layout_constraintEnd_toEndOf="@+id/layout_phone_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/layout_phone_editText"
        app:layout_constraintTop_toBottomOf="@+id/layout_phone_editText" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_editText"
            android:layout_width="330dp"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_confirm_password_editText"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/splinesansmedium"
        android:hint="@string/confirm_password_example"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/layout_password_editText"
        app:layout_constraintStart_toStartOf="@+id/layout_password_editText"
        app:layout_constraintTop_toBottomOf="@+id/layout_password_editText"
        app:startIconDrawable="@drawable/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_editText"
            android:layout_width="330dp"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phone_editText"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/phone_example"
        android:fontFamily="@font/splinesansmedium"
        app:startIconDrawable="@drawable/phone"
        app:layout_constraintEnd_toEndOf="@+id/layout_email_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/layout_email_editText"
        app:layout_constraintTop_toBottomOf="@+id/layout_email_editText" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_editText"
            android:layout_width="330dp"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email_editText"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/splinesansmedium"
        android:hint="@string/email_example"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:startIconDrawable="@drawable/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_editText"
            android:layout_width="330dp"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/main_app_name"
        android:fontFamily="@font/splinesansmedium"
        android:textColor="@color/blue"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/splinesansmedium"
        android:text="@string/sign_up_button"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/google_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/google_button"
        app:layout_constraintTop_toBottomOf="@+id/google_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/layout_confirm_password_editText"
        app:layout_constraintStart_toStartOf="@+id/layout_confirm_password_editText"
        app:layout_constraintTop_toBottomOf="@+id/layout_confirm_password_editText" />

    <TextView
        android:id="@+id/go_to_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/splinesansmedium"
        android:text="@string/sign_in_text_button"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_button"
        app:layout_constraintStart_toStartOf="@+id/sign_up_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />


</androidx.constraintlayout.widget.ConstraintLayout>