<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.common.SendTypeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSendType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/splinesansmedium"
            android:text="@string/choose_type_string"
            android:textSize="22sp">

        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/buttonSms"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="208dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/splinesansmedium"
        android:text="@string/send_sms_button"
        android:textSize="20dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/toolbarSendType"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSendType"
        tools:ignore="MissingConstraints"></Button>

    <Button
        android:id="@+id/buttonEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/send_email_button"
        android:fontFamily="@font/splinesansmedium"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/buttonSms"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/buttonSms"
        app:layout_constraintTop_toBottomOf="@+id/buttonSms"
        app:cornerRadius="10dp"/>

    <Button
        android:id="@+id/buttonPush"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/push_button"
        android:fontFamily="@font/splinesansmedium"
        android:textSize="20dp"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="10dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonEmail"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/buttonEmail"
        app:layout_constraintTop_toBottomOf="@+id/buttonEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>