<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:id="@+id/bottomdesign"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@color/backgroundColor"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    app:behavior_hideable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSms"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:text="@string/send_sms_button"
            android:fontFamily="@font/splinesansmedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></Button>

        <Button
            android:id="@+id/buttonEmail"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/send_email_button"
            android:fontFamily="@font/splinesansmedium"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/buttonSms"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="@+id/buttonSms"
            app:layout_constraintTop_toBottomOf="@+id/buttonSms" />

        <Button
            android:id="@+id/buttonPush"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/push_button"
            android:fontFamily="@font/splinesansmedium"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/buttonEmail"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/buttonEmail"
            app:layout_constraintTop_toBottomOf="@+id/buttonEmail" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:textSize="20dp"
            android:fontFamily="@font/splinesansmedium"
            android:backgroundTint="@color/blue"
            app:layout_constraintEnd_toEndOf="@+id/buttonPush"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/buttonPush"
            app:layout_constraintTop_toBottomOf="@+id/buttonPush"
            app:cornerRadius="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>