<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.common.login.LoginFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Send To..."
        android:fontFamily="@font/splinesansmedium"
        android:textColor="@color/blue"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_sign_in_email_input"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:fontFamily="@font/splinesansmedium"
        android:inputType="text"
        android:hint="@string/email_example"
        app:startIconDrawable="@drawable/email"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_email_input"
            android:layout_width="330dp"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_sign_in_password_input"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/password_example"
        android:fontFamily="@font/splinesansmedium"
        app:startIconDrawable="@drawable/password"
        app:layout_constraintEnd_toEndOf="@+id/layout_sign_in_email_input"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/layout_sign_in_email_input"
        app:layout_constraintTop_toBottomOf="@+id/layout_sign_in_email_input" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_password_input"
            android:layout_width="330dp"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_google_button"
        android:layout_width="315dp"
        android:layout_height="65dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/splinesansmedium"
        android:shadowColor="@color/black"
        android:text="@string/google_button"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/layout_sign_in_password_input"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/layout_sign_in_password_input"
        app:layout_constraintTop_toBottomOf="@+id/layout_sign_in_password_input"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="313dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/splinesansmedium"
        android:text="@string/sign_in_button"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_google_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/sign_in_google_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_google_button" />

    <TextView
        android:id="@+id/go_to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_text_button"
        android:fontFamily="@font/splinesansmedium"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
</androidx.constraintlayout.widget.ConstraintLayout>